--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,9 +9,11 @@ akka {
 
   remote {
     log-remote-lifecycle-events = off
-    netty.tcp {
-      hostname = "127.0.0.1"
-      port = 0
+
+    artery {
+      enabled = on
+      canonical.hostname = "127.0.0.1"
+      canonical.port = 0
     }
   }
 
